--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,13 @@
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Register</title>
+    <style>
+        .err {color: red}
+    </style>
+</head>
  <h1>Login to Mail Man</h1>
  <form action="/login" method="post">
   <div class="container">
@@ -5,16 +15,18 @@
     <label for="uname"><b>Email:</b></label>
     </div>
     <div>
-    <input type="text" placeholder="Enter Email" name="email" required> </div>
+    <input type="text" placeholder="Enter Email" name="email"  value="<%= typeof userEmail !== 'undefined' ? userEmail : '' %>"> </div>
+    </div>
+    <div class="err"><%= typeof emailError !== 'undefined' ? emailError : '' %></div>
+    <div>
+    <label for="passwd"><b>Password:</b></label>
     </div>
     <div>
-    <label for="psw"><b>Password:</b></label>
-    </div>
+    <input type="password" placeholder="Enter Password" name="passwd">
     <div>
-    <input type="password" placeholder="Enter Password" name="psw" required>
-    </div>
-    <div>
+    <div class="err"><%= typeof passwordError !== 'undefined' ? passwordError : '' %></div>
     <button type="submit">Login</button>
     </div>
   </div>
 </form> 
+</html>
