--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,13 @@
+<div class="headerContainer">
+<div>
+<h2>Simple Mail Man</h2>
+</div>
+<div class="controlPanel">
 <div>
 <%= userEmail %>
 </div>
 <form action="/" method="post">
 <button type="submit">Logout</button>
 </form>
+</div>
+</div>
