--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="/assets/styles.css" rel="stylesheet" type="text/css">
         <title>Mail Man</title>
         <style>
             .err {color: red}
@@ -10,5 +11,6 @@
     </head>
     <body>
         <%- include('header', {'userEmail': userEmail}) %>
+        <%- include('sidepanel') %>
     </body>
 </html>
