--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -43,6 +43,7 @@ body {
   padding: 5px;
 }
 
+.regis-container,
 .login-container {
   padding: 20px;
   background: #ffffff;
@@ -55,9 +56,11 @@ body {
   -moz-box-shadow: 10px 9px 28px -5px rgba(0, 0, 0, 0.51);
   border-radius: 5px;
 }
+
 .prompt-container {
   margin: 5px;
 }
+
 .prompt-container input {
   /* text-align: left; */
   width: 500px;
@@ -74,6 +77,7 @@ body {
   /* margin-left: 30%; */
 }
 
+.regis-header img,
 .login-header img {
   width: 80px;
   border-radius: 5px;
