--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,25 +3,32 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mail Man</title>
-        <style>
-.err {color: red}
-        </style>
+        <title>Registration</title>
+        <link href="/assets/styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1>Email Account Registration</h1>
-        <form action="/register" method="post">
-            <div class="container">
-                <div> <label for="uname"><b>Email:</b></label> </div>
+        <div class="regis-header">
+          <img src="favicon.ico" alt="mail man">
+
+        </div>
+        <div class="regis-container">
+          <h1>Registration</h1>
+          <form action="/register" method="post">
+            <div class="prompt-container">
+                <label for="uname"><b>Email:</b></label>
                 <div>
                     <input type="text" placeholder="Enter Desired Email" name="email" value="<%= typeof userEmail !== 'undefined' ? userEmail : '' %>">
                 </div>
                 <div class="err"><%= typeof emailError !== 'undefined' ? emailError : '' %></div>
-                <div> <label for="uname"><b>Full Name:</b></label> </div>
+            </div>
+            <div class="prompt-container">
+                <label for="uname"><b>Full Name:</b></label>
                 <div>
                     <input type="text" placeholder="Enter Your Full Name" name="fullname" value="<%= typeof userFullName !== 'undefined' ? userFullName : '' %>">
                 </div>
-                <div> <label for="passwd"><b>Password:</b></label> </div>
+            </div>
+            <div class="prompt-container">
+                <label for="passwd"><b>Password:</b></label>
                 <div>
                     <input type="password" placeholder="Enter Your Password" name="passwd" >
                 </div>
@@ -30,10 +37,11 @@
                         <input type="password" placeholder="Re-Enter Your Password" name="repasswd">
                     </div>
                     <div class="err"><%= typeof passwordReEnterError !== 'undefined' ? passwordReEnterError : '' %></div>
-                    <div>
+            </div>
+            <div class="prompt-container">
                         <button type="submit">Register</button>
-                    </div>
             </div>
         </form> 
+        </div>
     </body>
 </html>
