--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,13 +1,15 @@
-<div class="headerContainer">
-<div>
-<h2>Simple Mail Man</h2>
-</div>
-<div class="controlPanel">
-<div>
-<%= userEmail %>
-</div>
-<form action="/" method="post">
-<button type="submit">Logout</button>
-</form>
-</div>
+<div class="header-container">
+  <div class="header-title">
+    <h2>Simple Mail Man</h2>
+  </div>
+  <div class="control-panel">
+    <div class="control-panel-name">
+      <%= userEmail %>
+    </div>
+    <div class="control-panel-button">
+    <form action="/" method="post">
+      <button type="submit">Logout</button>
+    </form>
+    </div>
+  </div>
 </div>
