--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Login</title>
+        <title>Sign in</title>
         <link href="/assets/styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
@@ -37,6 +37,9 @@
                 <button type="submit">Login</button>
                 </div>
             </form> 
+            <div class="login-or-regis">
+            <p> New to Mail Man? <a href='/register'>Create account</a></p>
+            </div>
         </div>
         <body>
 </html>
