--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Registration</title>
+        <title>Sign up</title>
         <link href="/assets/styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
@@ -12,7 +12,7 @@
 
         </div>
         <div class="regis-container">
-          <h1>Registration</h1>
+          <h1>Create your Mail Man Account</h1>
           <form action="/register" method="post">
             <div class="prompt-container">
                 <label for="uname"><b>Email:</b></label>
@@ -42,6 +42,7 @@
                         <button type="submit">Register</button>
             </div>
         </form> 
+            <p>Already have an account? <a href='/login'>Sign in</a></p>
         </div>
     </body>
 </html>
