--- a/views/sidepanel.ejs
+++ b/views/sidepanel.ejs
@@ -1,11 +1,11 @@
-<div class="sidePanel">
-<div>
+<div class="side-panel">
+<div class="side-panel-button">
   <a href="/inbox">Inbox</a>
 </div>
-<div>
+<div class="side-panel-button">
   <a href="/outbox">Outbox</a>
 </div>
-<div>
+<div class="side-panel-button">
   <a href="/compose">Compose</a>
 </div>
 </div>
