--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,31 +4,34 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sign up</title>
-        <link href="/assets/styles.css" rel="stylesheet" type="text/css">
+        <link href="/assets/auth.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div class="regis-header">
+        <div class="auth-header">
           <img src="favicon.ico" alt="mail man">
 
         </div>
-        <div class="regis-container">
+        <div class="auth-container">
+          <div class="auth-title">
           <h1>Create your Mail Man Account</h1>
+          <h4>Enter your details to access the Aether</h4>
+          </div>
           <form action="/register" method="post">
             <div class="prompt-container">
-                <label for="uname"><b>Email:</b></label>
+                <label for="uname"><b>Email</b></label>
                 <div>
                     <input type="text" placeholder="Enter Desired Email" name="email" value="<%= typeof userEmail !== 'undefined' ? userEmail : '' %>">
                 </div>
                 <div class="err"><%= typeof emailError !== 'undefined' ? emailError : '' %></div>
             </div>
             <div class="prompt-container">
-                <label for="uname"><b>Full Name:</b></label>
+                <label for="uname"><b>Full Name</b></label>
                 <div>
                     <input type="text" placeholder="Enter Your Full Name" name="fullname" value="<%= typeof userFullName !== 'undefined' ? userFullName : '' %>">
                 </div>
             </div>
             <div class="prompt-container">
-                <label for="passwd"><b>Password:</b></label>
+                <label for="passwd"><b>Password</b></label>
                 <div>
                     <input type="password" placeholder="Enter Your Password" name="passwd" >
                 </div>
