--- a/public/assets/outbox.css
+++ b/public/assets/outbox.css
@@ -3,6 +3,7 @@
 @import "partials/sidepanel.css";
 @import "partials/home.css";
 
-#inbox-button {
+
+#outbox-button {
   background: var(--hl-bg);
 }
