--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/assets/compose.css" rel="stylesheet" type="text/css">
         <script src="/assets/script.js"></script>
-        <title>Compose Email</title>
+        <title>Aether</title>
     </head>
     <body>
         <%- include('partials/header', {'userEmail': userEmail}) %>
