--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="auth-header">
-        <img src="favicon.ico" alt="mail man">
+        <img src="assets/aether.png" alt="mail man">
 
         </div>
         <div class="auth-container">
