--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,7 @@
 <div class="header-container">
   <div class="header-title">
-    <h2>Simple Mail Man</h2>
+      <img src="assets/aether.png" alt="mail man">
+    <!-- <h2>Aether</h2> -->
   </div>
   <div class="control-panel">
     <div class="control-panel-name">
