--- a/views/partials/sidepanel.ejs
+++ b/views/partials/sidepanel.ejs
@@ -1,11 +1,11 @@
 <div class="side-panel">
-<div class="side-panel-button">
+<div id="inbox-button" class="side-panel-button">
   <a href="/inbox">Inbox</a>
 </div>
-<div class="side-panel-button">
+<div id="outbox-button" class="side-panel-button">
   <a href="/outbox">Outbox</a>
 </div>
-<div class="side-panel-button">
+<div id="compose-button" class="side-panel-button">
   <a href="/compose">Compose</a>
 </div>
 </div>
