--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,12 +8,12 @@
     </head>
     <body>
         <div class="auth-header">
-          <img src="favicon.ico" alt="mail man">
+          <img src="assets/aether.png" alt="mail man">
 
         </div>
         <div class="auth-container">
           <div class="auth-title">
-          <h1>Create your Mail Man Account</h1>
+          <h1>Create your Aether Account</h1>
           <h4>Enter your details to access the Aether</h4>
           </div>
           <form action="/register" method="post">
