--- a/public/assets/partials/header.css
+++ b/public/assets/partials/header.css
@@ -4,17 +4,22 @@
   flex-direction: row;
   align-items: flex-start;
   /* justify-content: flex-end; */
-  border: 3px solid salmon;
+  /* border: 3px solid salmon; */
   padding: 0.4rem;
   margin-top: 0.6rem;
   margin-left: 0.6rem;
   margin-right: 0.6rem;
   margin-bottom: 0.4rem;
+  border-radius: 5px;
 }
 
 .header-title {
   justify-content: flex-start;
   width: 100%;
+}
+
+.header-title img {
+  width: 100px;
 }
 
 .control-panel {
