--- a/views/outbox.ejs
+++ b/views/outbox.ejs
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/assets/inbox.css" rel="stylesheet" type="text/css">
+        <link href="/assets/outbox.css" rel="stylesheet" type="text/css">
         <script src="/assets/script.js"></script>
-        <title>Aether - Inbox</title>
+        <title>Aether - Outbox</title>
     </head>
     <body>
         <%- include('partials/header', {'userEmail': userEmail}) %>
@@ -14,18 +14,15 @@
         <% const months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"] %>
         <div class="email-container">
         <% for (var i = 0; i < messages.length ; i++) { %>
-          <div class="email-object">
-          <input type="checkbox" id="email-checkbox" name="emailCheckbox">
-          <a class="email-info" href="/inbox/<%-messages[i]['messageID']%>">
-            <div class="email-left" is-read=<%messages[i]["isRead"]%>>
-              <div><p><%= messages[i]["messageAuthorFullName"] %></p></div>
-              <div><p><%= messages[i]["messageSubject"] %></p></div>
+          <a class="email-info" href="/outbox/<%-messages[i]['messageID']%>">
+            <div class="email-left">
+              <div><p> <%= messages[i]["messageAuthorFullName"] %></p></div>
+              <div><p> <%= messages[i]["messageSubject"] %></p></div>
             </div>
             <div class="email-right">
               <div><p> <%= messages[i]["messageDate"].getDate() + " " + months[messages[i]["messageDate"].getMonth()] + ", " + messages[i]["messageDate"].getFullYear() %></p></div>
             </div>
           </a>
-          </div>
             <% } %>
           </div>
         </div>
