--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,7 +39,7 @@
                 </div>
             </form> 
             <div class="login-or-regis">
-            <p> New to Mail Man? <a href='/register'>Create account</a></p>
+            <p> New to Aether? <a href='/register'>Create account</a></p>
             </div>
         </div>
         <body>
