--- a/public/assets/inbox.css
+++ b/public/assets/inbox.css
@@ -2,7 +2,9 @@
 @import "partials/header.css";
 @import "partials/sidepanel.css";
 @import "partials/home.css";
+@import "partials/pagination.css";
 
 #inbox-button {
   background: var(--hl-bg);
 }
+
