--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/assets/detail.css" rel="stylesheet" type="text/css">
         <script src="/assets/script.js"></script>
-        <title>Mail Man</title>
+        <title>Aether - Detail</title>
     </head>
     <body>
         <%- include('partials/header', {'userEmail': userEmail}) %>
