--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <div class="header-container">
   <div class="header-title">
-      <img src="assets/aether.png" alt="mail man">
+      <img src="/assets/aether.png" alt="aether">
     <!-- <h2>Aether</h2> -->
   </div>
   <div class="control-panel">
