--- a/views/inbox.ejs
+++ b/views/inbox.ejs
@@ -13,10 +13,13 @@
         <%- include('partials/sidepanel', {'userEmail': userEmail}) %>
         <% const months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"] %>
         <div class="email-container">
+        <form action="/delete" method="post">
+        <button type="submit">Delete</button>
+        </form>
         <% for (var i = 0; i < messages.length ; i++) { %>
           <div class="email-object">
-          <input type="checkbox" id="email-checkbox" name="emailCheckbox">
-          <a class="email-info <%=String(messages[i]['isRead']) == '0' ? 'notread' : 'read' %>" href="/inbox/<%-messages[i]['messageID']%>">
+          <input type="checkbox" id="email-checkbox" value="<%=messages[i]['messageID']%>" name="emailCheckbox">
+          <a class="email-info <%=String(messages[i]['isRead']) == '0' ? 'notread' : 'read' %>" href="/inbox/<%-currentPage%>/<%-messages[i]['messageID']%>">
             <div class="email-left" >
               <div><p><%= messages[i]["messageAuthorFullName"] %></p></div>
               <div><p><%= messages[i]["messageSubject"] %></p></div>
@@ -29,5 +32,18 @@
             <% } %>
           </div>
         </div>
+          <ul class="pagination">
+            <li class="page-item <%= currentPage === 1 ? 'disabled' : '' %>">
+            <a href="/inbox/<%-currentPage - 1%>" class="page-link">Previous</a>
+            </li>
+            <% for (let i = 1; i <= totalPages; i++) { %>
+              <li class="page-item <%= currentPage === i ? 'active' : 'inactive' %>">
+                <a href="/inbox/<%- i %>" class="page-link"><%= i %></a>
+                </li>
+                <% } %>
+                <li class="page-item <%= currentPage === totalPages ? 'disabled' : '' %>">
+                <a href="/inbox/<%-currentPage + 1 %>" class="page-link">Next</a>
+                </li>
+                </ul>
     </body>
 </html>
