--- a/views/outbox.ejs
+++ b/views/outbox.ejs
@@ -16,7 +16,7 @@
         <% for (var i = 0; i < messages.length ; i++) { %>
           <div class="email-object">
             <input type="checkbox" id="email-checkbox" name="emailCheckbox">
-          <a class="email-info" href="/outbox/<%-messages[i]['messageID']%>">
+          <a class="email-info <%=String(messages[i]['isRead']) == '0' ? 'notread' : 'read' %>" href="/outbox/<%-currentPage%>/<%-messages[i]['messageID']%>">
             <div class="email-left">
               <div><p> <%= messages[i]["messageAuthorFullName"] %></p></div>
               <div><p> <%= messages[i]["messageSubject"] %></p></div>
@@ -29,5 +29,18 @@
             <% } %>
           </div>
         </div>
+          <ul class="pagination">
+            <li class="page-item <%= currentPage === 1 ? 'disabled' : '' %>">
+            <a href="/outbox/<%-currentPage - 1%>" class="page-link nav">Previous</a>
+            </li>
+            <% for (let i = 1; i <= totalPages; i++) { %>
+              <li class="page-item <%= currentPage === i ? 'active' : 'inactive' %>">
+                <a href="/outbox/<%-i%>" class="page-link"><%-i %></a>
+                </li>
+                <% } %>
+                <li class="page-item <%= currentPage === totalPages ? 'disabled' : '' %>">
+                <a href="/outbox/<%-currentPage + 1 %>" class="page-link">Next</a>
+                </li>
+                </ul>
     </body>
 </html>
