--- a/public/assets/auth.css
+++ b/public/assets/auth.css
@@ -6,6 +6,7 @@
 
 .auth-header img {
   width: 100px;
+  height: 100px;
   border-radius: 5px;
   box-shadow: 10px 9px 28px -5px rgba(0, 0, 0, 0.51);
   -webkit-box-shadow: 10px 9px 28px -5px rgba(0, 0, 0, 0.51);
